--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                 <a href="https://www.stumbleupon.com/"><img src = "img/stmbleupon.png" alt = "stumbleupon" class = "society society--stumbleupon"></a>
                 <a href = "#"><img src = "img/rss.png" alt = "rss" class = "society society--rss"></a>
                 <h3 class = "axure"> &#169; 2015 Axure Themes</h3>
+                <hr class="black-line">
+                </div>
             </div>
             </div>
         </footer>
